--- a/css/work.css
+++ b/css/work.css
@@ -151,8 +151,8 @@
   transform: translateZ(0);
   max-width: 100%;
   height: auto;
-  /* Constrain height to fit viewport better */
-  max-height: 70vh;
+  /* Allow images to display at natural size, up to 85vh */
+  max-height: 85vh;
   object-fit: contain;
 }
 
@@ -188,7 +188,7 @@
   border: none;
   display: block;
   width: 100%;
-  aspect-ratio: 1 / 1;
+  /* Remove forced square aspect ratio - let images display naturally */
   transition: none;
   image-rendering: -webkit-optimize-contrast;
   image-rendering: crisp-edges;
@@ -197,7 +197,7 @@
   transform: translateZ(0);
   max-width: 100%;
   height: auto;
-  max-height: 70vh;
+  max-height: 85vh;
   object-fit: contain;
 }
 
